--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "better-sqlite3": "^8.0.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
